# src/rest_api/handler/auth.go
@@ -30,16 +30,16 @@ func getUserByUsername(u string) (*model.User, error) {
 	return &user, nil
 }
 
-// Login is a function to get token
+// Login godoc
 // @Summary Get jwt token
 // @Description Get jwt token
 // @Tags Auth
 // @Accept json
 // @Produce json
-// @Param auth body model.LoginInput true "Login Input"
+// @Param input body model.LoginInput true "Login Input"
 // @Success 200 {object} model.ResponseHTTP{data=string}
 // @Failure 503 {object} model.ResponseHTTP
-// @Router /api/v1/auth/login [post]
+// @Router /auth/login [post]
 func Login(c *fiber.Ctx) error {
 	var input model.LoginInput
 	var ud model.User
